Implementacion de Panel pais en Administracion

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TF_Organix
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=conector\\mysql-connector-java-8.0.23.jar
+file.reference.RSPanelSlider.jar=conector/RSPanelSlider.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.RSPanelSlider.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
