--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TF_Organix
 excludes=
+file.reference.jcalendar-1.3.3.jar=conector/jcalendar-1.3.3.jar
 file.reference.mysql-connector-java-8.0.23.jar=conector\\mysql-connector-java-8.0.23.jar
 file.reference.RSPanelSlider.jar=conector/RSPanelSlider.jar
 includes=**
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.RSPanelSlider.jar}
+    ${file.reference.RSPanelSlider.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
